--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - lib/assets/images/offline_placeholder.jpg
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
