--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.12.0+2
   flutter_pagewise: 1.2.3
+  flutter_circular_chart: ^0.1.0
 
 dev_dependencies:
   flutter_test:
